--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,8 @@ dependencies {
     runtimeOnly 'com.mysql:mysql-connector-j'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation group: 'com.auth0', name: 'java-jwt', version: '3.10.3'
+    implementation group: 'redis.clients', name: 'jedis', version: '5.1.3'
+
 }
 
 tasks.named('test') {
