--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,6 @@ spring.data.web.pageable.max-page-size=100
 #jwt
 jwt.secret-key=trunghjk1994
 jwt.expired=86400000
+
+logging.level.org.springframework.security=DEBUG
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
